--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,15 +4,18 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-surge-ping = "0.5.2" # used to do the actual pinging
-reqwest = "0.11.10" # used to download the script
-regex = "1.5.5" # used to extract the server locations from the script
-tokio = "1.17.0" # used for concurrent pinging
-futures = "0.3.21" # used for managing concurrency
-rand = "0.8.5" # used to shuffle slices
-indicatif = "0.16.2" # used to visualize progress
+surge-ping = { version = "0" }
+reqwest = { version = "0" }
+tokio = { version = "1", features = ["macros"] }
+trust-dns-resolver = { version = "0", features = ["dns-over-rustls"] }
+futures = { version = "0" }
+rand = { version = "0" }
+indicatif = { version = "0" }
+lazy-regex = { version = "2" }
+anyhow = { version = "1" }
+log = { version = "0" }
+simplelog = { version = "0" }
 
 [profile.release]
-strip = true # strip debug information from release-builds
-opt-level = "z" # optimize for binary size instead of speed
-lto = true # use link-time-optimization
+strip = true
+panic = "abort"
