--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,8 @@ env_logger = { version = "0" }
 dotenv = { version = "0" }
 zip = { version = "0", default-features = false }
 chrono = { version = "0" }
+maxminddb = { version = "0" }
+serde = { version = "1", features = ["derive"] }
 
 [profile.release]
 strip = true
