--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,6 +20,8 @@ zip = { version = "2", default-features = false }
 chrono = { version = "0" }
 maxminddb = { version = "0" }
 serde = { version = "1", features = ["derive"] }
+serde_json = "1.0.128"
+parking_lot = "0.12.3"
 
 [profile.release]
 strip = true
