--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,7 @@ maxminddb = { version = "0" }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1.0.128"
 parking_lot = "0.12.3"
+owo-colors = "4.1.0"
 
 [profile.release]
 strip = true
