--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 [dependencies]
 surge-ping = { version = "0" }
 reqwest = { version = "0" }
-tokio = { version = "1", features = ["macros", "fs"] }
+tokio = { version = "1", features = ["macros", "fs", "rt-multi-thread"] }
 trust-dns-resolver = { version = "0", features = ["dns-over-rustls"] }
 futures = { version = "0" }
 rand = { version = "0" }
@@ -20,9 +20,11 @@ zip = { version = "2", default-features = false }
 chrono = { version = "0" }
 maxminddb = { version = "0" }
 serde = { version = "1", features = ["derive"] }
-serde_json = "1.0.128"
-parking_lot = "0.12.3"
-owo-colors = "4.1.0"
+serde_json = { version = "1" }
+parking_lot = { version = "0" }
+owo-colors = { version = "4" }
+colorgrad = { version = "0" }
+rand_xoshiro = { version = "0" }
 
 [profile.release]
 strip = true
